# SpellingBeeBot

./: .gitignore  Pipfile  Readme.md  bot.py  commands-explanation.txt  docker-compose.yml  explanation.txt  main.py  models.py  pyproject.toml  rules-explanation.txt
test/: test_bot.py  test_models.py
tests/: test_bot.py  test_models.py
webpage/: index.html
