[tool.poetry]
name = "spellingbee"
version = "0.5.0"
description = "Play the NYT Spelling Bee through Discord"
authors = ["toBeOfUse <comingaflame@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.39"
tzdata = "^2022.1"
aiocron = "^1.8"
disnake = "^2.5.2"
bee-engine = {git = "https://github.com/tobeofuse/bee-engine.git"}

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
freezegun = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
