[project]
name = "spellingbee"
version = "0.5.0"
description = "Play the NYT Spelling Bee through Discord"
authors = [{ name = "toBeOfUse", email = "comingaflame@gmail.com" }]
requires-python = "~=3.10"
license = "MIT"
dependencies = [
    "SQLAlchemy>=1.4.39,<2",
    "tzdata~=2022.1",
    "aiocron~=1.8",
    "disnake>=2.5.2,<3",
    "bee-engine",
]

[dependency-groups]
dev = [
    "yapf>=0.32.0,<0.33",
    "freezegun>=1.2.1,<2",
]

[tool.uv]

[tool.uv.sources]
bee-engine = { git = "https://github.com/tobeofuse/bee-engine.git" }
